position video caption with right instead of margin-right, a bit more predictable when positioning absolutely and solves a problem where it was not respecting word-wrap: break-word

--- a/resources/gato-component-cards/css/video.scss
+++ b/resources/gato-component-cards/css/video.scss
@@ -16,7 +16,7 @@
       left: 2rem;
       bottom: 3rem;
       padding: 0.7rem 1rem;
-      margin-right: 2rem;
+      right: 2rem;
       @at-root [data-eq~="500px"]#{&} {
         bottom: 2rem;
         h3 { font-size: 1.5rem; }
@@ -33,7 +33,7 @@
         position: relative;
         left: 0;
         bottom: 0;
-        margin: 0;
+        right: 0;
       }
     }
   }
